# ai-travel-agent

./: .gitignore  pyproject.toml
agents/: _pydantic_compat.py  agent.py  errors.py  privacy.py  regions.py
agents/data_sources/: __init__.py  aggregator.py  amadeus_source.py  base.py  duffel_source.py  kiwi_source.py  normalizer.py  serpapi_source.py
agents/intent/: __init__.py  fuzzy.py  iata.py  parser.py
agents/presentation/: __init__.py  formatter.py  itinerary.py  sorting.py
agents/tools/: __init__.py  airport_code.py  compare_prices.py  flight_details.py  flights_finder.py  hotels_finder.py  open_jaw.py  seat_availability.py
tests/: conftest.py
tests/e2e/: fake_llm.py  test_dialog_graph.py  test_europe_open_jaw.py
tests/fixtures/: amadeus_offers.json  amadeus_token.json  duffel_offer_request.json  kiwi_search.json  serpapi_flights.json
tests/integration/: http_mock.py  test_aggregator.py  test_amadeus_adapter.py  test_duffel_adapter.py  test_kiwi_adapter.py  test_open_jaw_tool.py
tests/privacy/: test_agent_leak_regression.py  test_scrub.py
tests/unit/: test_errors.py  test_fuzzy.py  test_iata.py  test_intent_parser.py  test_normalizer.py  test_open_jaw_ranking.py  test_rate_limiter.py  test_regions.py  test_sorting.py  test_transit_filter.py  test_with_retries.py
